--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,22 +8,12 @@
     tools:context=".MainActivity"
     >
 
-  <androidx.core.widget.NestedScrollView
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/recyclerView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      >
-
-    <TextView
-        android:id="@+id/text_view_movie"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-  </androidx.core.widget.NestedScrollView>
+      android:padding="4dp"
+      android:background="@android:color/darker_gray"
+      android:scrollbars="vertical"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
