--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,37 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="120dp"
+    android:layout_height="190dp"
+    android:layout_margin="5dp"
     app:cardCornerRadius="4dp"
-    android:layout_marginBottom="4dp"
     >
 
-  <RelativeLayout
+  <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_margin="4dp"
+      android:orientation="vertical"
       >
     <ImageView
         android:id="@+id/movie_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:background="#2d2d2d"
+        android:scaleType="centerCrop"
         />
 
     <TextView
         android:id="@+id/movie_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@id/movie_image"
-        android:layout_toRightOf="@id/movie_image"
-        >
-
-    </TextView>
-  </RelativeLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="Movie Title"
+        android:textSize="13sp"
+        />
+  </LinearLayout>
 
 </androidx.cardview.widget.CardView>
