--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -97,19 +97,28 @@
           android:text="@string/plot_synopsis"
           />
 
-      <TextView
-          android:id="@+id/trailer"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="10dp"
-          android:background="#edecec"
-          android:padding="8dp"
-          android:text="@string/plot_synopsis"
-          />
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/trailer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:padding="8dp"
+            android:text="@string/movie_trailer_title"
+            android:textStyle="bold"
+            />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/trailerRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:layout_marginTop="10dp"
+            android:padding="8dp"
+            />
+      </LinearLayout>
     </LinearLayout>
-
   </ScrollView>
-
 </RelativeLayout>
