--- a/app/src/main/res/layout/movie_trailer_item.xml
+++ b/app/src/main/res/layout/movie_trailer_item.xml
@@ -6,26 +6,29 @@
     android:layout_height="50dp"
     android:layout_margin="5dp"
     app:cardCornerRadius="4dp"
+    android:clickable="true"
+    android:focusable="true"
     >
 
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
-      android:background="#bf137a"
+      android:background="#3700B3"
+      android:clickable="false"
       >
 
     <TextView
         android:id="@+id/movie_trailer_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clickable="true"
+        android:clickable="false"
         android:focusable="true"
         android:gravity="center"
         android:text="@string/movie_trailer_title"
         android:textSize="13sp"
         android:textColor="#ffffff"
-        />
+        android:textStyle="bold"/>
   </LinearLayout>
 
 </androidx.cardview.widget.CardView>
