--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -28,6 +28,18 @@
           android:scaleType="centerCrop"
           />
 
+      <Button
+          android:id="@+id/favourite"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="@string/favouriteButtonText"
+          android:padding="8dp"
+          android:textColor="#ffffff"
+          android:background="#3700B3"
+          android:layout_marginTop="8dp"
+          android:textStyle="bold">
+      </Button>
+
       <TextView
           android:id="@+id/movie_title"
           android:layout_width="wrap_content"
