--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -37,7 +37,9 @@
           android:textColor="#ffffff"
           android:background="#3700B3"
           android:layout_marginTop="8dp"
-          android:textStyle="bold">
+          android:textStyle="bold"
+          android:clickable="true"
+          android:focusable="true">
       </Button>
 
       <TextView
