Favouriting now works with livedata

--- a/app/src/main/res/menu/sort_menu.xml
+++ b/app/src/main/res/menu/sort_menu.xml
@@ -9,6 +9,8 @@
       android:title="@string/sort_popularity"/>
     <item android:id="@+id/sort_by_top"
         android:title="@string/sort_top_rated"/>
+    <item android:id="@+id/favourites"
+        android:title="@string/Favourites"/>
   </menu>
 </item>
 </menu>
